# SmartCanvas

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  compose.yml  gestureDetection.py  setup.py
.github/workflows/: greetings.yml  merge-verification.yml
csmart_canvas/: .gitignore  CMakeLists.txt
csmart_canvas/dependencies/sc_filter/: CMakeLists.txt
csmart_canvas/dependencies/sc_filter/include/: sc_filter.h
csmart_canvas/dependencies/sc_filter/src/: sc_filter.cpp
csmart_canvas/dependencies/sc_video_capture/: CMakeLists.txt
csmart_canvas/dependencies/sc_video_capture/include/: sc_video_capture.h
csmart_canvas/dependencies/sc_video_capture/src/: sc_video_capture.cpp
csmart_canvas/include/: sc_config.h  sc_typedef.h
csmart_canvas/include/assert/: sc_assert.h
csmart_canvas/include/core/: sc_core.h
csmart_canvas/include/logging/: sc_logging.h
csmart_canvas/include/math/: sc_math.h
csmart_canvas/include/renderer/: sc_builtin_shaders.h  sc_font.h  sc_renderer.h
csmart_canvas/include/sm/: sc_sm.h
csmart_canvas/src/: sc_main.c
csmart_canvas/src/core/: sc_core.c
csmart_canvas/src/logging/: sc_logging.c
csmart_canvas/src/math/: sc_math.c
csmart_canvas/src/renderer/: sc_builtin_shaders.c  sc_font.c  sc_renderer.c
csmart_canvas/src/sm/: sc_sm.c  sc_sm_setup.c
docs/: Architecture.md  Web-service_principle.md  docker.md  web_app_installation.md  web_app_setup.md  web_app_usage.md
docs/resources/: smartcanvas_statemachine.pptx
smart_canvas/: __init__.py  __main__.py  background.py  capture.py  core.py  database.py  download_from_database.py  filtering.py  frontpage.py  gestureDetection.py  gesture_detection.py  helpers.py  instructions.py  mock_server.py  qr_code.py  render.py  requirements.txt  schema.sql  text.glsl  ui.py  upload.py  upload_to_database.py  window.py
smart_canvas/backgrounds/: meta.json
smart_canvas/filters/: animeStyle.py  canvas.py  carousel.py  gs_cartoon.py  model.py  mosaic.py  oil_painting.py  painterly.py  sketch.py  watercolor.py
smart_canvas/filters/animeFilter/: animeStyle.py
smart_canvas/filters/animefilter/: animestyle.py
smart_canvas/filters/pointillism/: color_palette.py  pointillism.py
smart_canvas/shaders/: image.glsl  progressbar.glsl  text.glsl
tests/: context.py  core_test.py  database_test.py  filter_test.py  hand_gesture_test.py  helpers_test.py  mock_server_test.py  qr_code_test.py  sanity_test.py  ui_test.py  upload_test.py  web_service_test.py
tests/test_assets/database/: database.db
web/: __init__.py  server.py
web/main/: common_events.py  events.py  routes.py
web/static/: scripts.js
web/static/styles/: style.css
web/templates/: dl_failed.html  fullscreen.html  fullscreen_old.html  fullscreen_symbol.html  index.html  us_browser.html
